# HashVault

./: CMakeLists.txt  CMakeUserPresets.json  README.md
HashVault/: CMakeLists.txt  HashVault.cpp  HashVault.h  HashVault.ui  HashVaultSettings.cpp  Helper.cpp  main.cpp
HashVault/auth/: HashVaultAuth.cpp
HashVault/config/: database.ini
HashVault/database/: DBManager.cpp  DBManager.h
HashVault/passwords/: HashVaultPasswords.cpp
HashVault/security/: CryptoManager.cpp  CryptoManager.h  JwtManager.cpp  JwtManager.h
HashVault/server/: LocalServer.cpp  LocalServer.h
